--- a/src/index.css
+++ b/src/index.css
@@ -12,10 +12,11 @@ code {
     monospace;
 }
 
-.kGyWld {
+.WidgetWrapper__StyledWidgetWrapper-sc-11krezp-0{
   box-shadow: 0 0 0 0 rgba(0, 0, 0, 0) !important;
+  min-width: 260px !important;;
 }
 
-.kJnRfS{
-  min-width: 270px !important;
+.TokenOptions__OnHover-sc-xx1k3q-2{
+  display: none !important;
 }
