--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,7 @@ code {
 .TokenOptions__OnHover-sc-xx1k3q-2{
   display: none !important;
 }
+
+.Column-sc-1ul9eki-0{
+  background-color: white !important;
+}
